--- a/includes/ccs-docs.css
+++ b/includes/ccs-docs.css
@@ -7,6 +7,8 @@
 	}
 	h2 .nav-tab {
 		font-size: 12px; line-height: 16px;
+		margin-right: 2px;
+    	padding: 4px 6px;
 	}
 	.doc-style {
 		max-width: 760px; /*margin: 0 auto;*/
@@ -15,6 +17,7 @@
 	}
 	.doc-style .nav-tab-wrapper {
 		padding-top: 0;
+		padding-left: 0;
 		margin-bottom: 20px;
 		border-bottom: 1px solid #ddd;
 	}
