--- a/includes/ccs-docs.css
+++ b/includes/ccs-docs.css
@@ -59,7 +59,13 @@
 		color: #777;
 	}
 	.doc-style ul {
-		list-style:disc; padding-left:40px;
+		list-style:disc;
+		padding-left:40px;
+	}
+	.doc-style ul > ul {
+		padding-bottom: 10px;
+		list-style: none;
+		padding-left: 20px;
 	}
 	.doc-style .overview-logo-pad {
 		margin: 15px auto;
