--- a/includes/docs.css
+++ b/includes/docs.css
@@ -83,6 +83,13 @@
 		margin: 15px auto;
 	}
 	.doc-style hr.setting-section {
-		margin-top: -10px;
+		margin-top: 0px;
 		padding-bottom: 10px;
+	}
+	.doc-style .form-table td {
+		width: 100%;
+		line-height: 1em;
+		padding: 10px;
+	}
+	.doc-style .form-table hr {
 	}
