--- a/includes/docs.css
+++ b/includes/docs.css
@@ -29,8 +29,10 @@
 	.doc-style .nav-tab-wrapper {
 		padding-top: 0;
 		padding-left: 0;
+		padding-right: 0;
 		margin-bottom: 20px;
 		border-bottom: 1px solid #ddd;
+		text-align: center;
 	}
 	.doc-style .nav-tab-wrapper a {
 		color: #555;
@@ -92,4 +94,10 @@
 		padding: 10px;
 	}
 	.doc-style .form-table hr {
+	}
+	.doc-style .green {
+		color: #1abb1e;
+	}
+	.doc-style .grey {
+		color: #888;
 	}
