--- a/includes/docs.css
+++ b/includes/docs.css
@@ -73,8 +73,8 @@
 		color: #555;
 	}
 	.doc-style ul {
-		list-style:disc;
-		padding-left:40px;
+		list-style:none;
+		padding-left:20px;
 	}
 	.doc-style ul > ul {
 		padding-bottom: 10px;
