--- a/includes/docs/html/user.html
+++ b/includes/docs/html/user.html
@@ -105,6 +105,7 @@ The <b>[is]</b> shortcode is used to display content based on user status.
 
 <h4>Display user status</h4>
 <code>[is admin]You are an administrator.[/is]
+[is author]You are the author of current post.[/is]
 [is login]You are logged in.[/is]
 [is logout]You are logged out.[/is]
 [is user="john"]You are John.[/is]
@@ -113,7 +114,8 @@ The <b>[is]</b> shortcode is used to display content based on user status.
 <hr>
 <h3>Parameters</h3>
 <ul>
-	<li><b>admin</b> - user has admin capability (manage options)</li>
+  <li><b>admin</b> - user has admin capability (manage options)</li>
+  <li><b>author</b> - user is author of current post</li>
 	<li><b>login</b> - user is logged in</li>
 	<li><b>logout</b> - user is logged out</li>
 	<li><b>user</b> - user name or ID - multiple values are possible: "1, 3, 22"</li>
@@ -124,8 +126,15 @@ The <b>[is]</b> shortcode is used to display content based on user status.
 	Multiple values are possible: <i>role="admin, subscriber"</i> will be true if the user is <i>admin</i> or <i>subscriber</i>.
 	See the list of available user roles and capabilities under <a href="index.php?page=content_overview#user-roles">Dashboard -> Content -> User Roles</a>.
 </ul>
-You can also use <b>[is not]</b> to display something when the condition is not true.
-<br>
+You can use <b>[else]</b> or <b>[is not]</b> to display something when the condition is not true.
+
+<h4>Logged in or logged out</h4>
+<code>[is login]
+&nbsp;&nbsp;You are logged in.
+[else]
+&nbsp;&nbsp;You are not logged in.
+[/is]
+</code><br>
 
 <a id="login-out" href="#"></a>
 <h3 align="center">Login/out</h3>
