--- a/includes/docs/html/comment.html
+++ b/includes/docs/html/comment.html
@@ -5,7 +5,7 @@ Use the <b>[comments] </b>shortcode to display recent comments, or those of th
 
 <h4>Display five most recent comments</h4>
 <code>[comments count="5"]
-&nbsp;&nbsp;&nbsp;&nbsp;[comment content] by [comment author]
+&nbsp;&nbsp;&nbsp;&nbsp;[comment] by [comment author]
 [/comments]
 </code><br>
 <hr>
@@ -38,7 +38,10 @@ Inside the comments loop, use <b>[comment]</b> to display the following fields.
 	<li><b>author-link</b> - author name with link to URL; if no URL, then displays just name</li>
 </ul><ul>
 	<li><b>total</b> - total comment count; use after the loop is finished</li>
-</ul><br>
+</ul>
+If no parameter is specified, it will display comment content by default.
+
+<br>
 <hr>
 <h3>Comment count and input form</h3>
 
