--- a/includes/docs/html/acf.html
+++ b/includes/docs/html/acf.html
@@ -2,6 +2,14 @@
 
 <hr>
 
+<h3>Page link</h3>
+
+Use the <b>[field]</b> shortcode to display a page link field. This will display the URL of a post or archive.
+
+<code>[field link="page_link"]</code><br>
+
+<hr>
+
 <h3>Relationship</h3>
 
 Use the <b>[related]</b> shortcode to loop through a relationship field.
@@ -109,7 +117,7 @@ You can pass the image IDs to another shortcode.
 <hr>
 <h3>ACF fields in other posts</h3>
 
-Display gallery, relationship, repeater, or flexible content fields from other posts inside the loop.
+Display ACF fields from other posts, using the loop.
 
 <code>[loop name="hello-world"]
 &nbsp;&nbsp;&nbsp;&nbsp;[repeater field="boxes"]
