--- a/includes/docs/html/acf.html
+++ b/includes/docs/html/acf.html
@@ -2,9 +2,21 @@
 
 <hr>
 
+<h3>Date field</h3>
+
+Use the <i>acf_date</i> parameter to query the date field.
+
+<code>[loop type="event" acf_date="date_field" value="future"]</code><br>
+
+Use the <i>acf_date</i> parameter to display the date field with the selected formatting.
+
+<code>[field acf_date="date_field"]</code><br>
+
+<hr>
+
 <h3>Page link</h3>
 
-Use the <b>[field]</b> shortcode to display a page link field. This will display the URL of a post or archive.
+Use the <i>link</i> parameter to display a page link field. This will display the URL of a post or archive.
 
 <code>[field link="page_link"]</code><br>
 
