--- a/includes/docs/docs.css
+++ b/includes/docs/docs.css
@@ -1,103 +1,105 @@
-	.wrap {
-		margin-left: -5px;
-		max-width: 760px; /*margin: 0 auto;*/
-		font-weight: 300;
-	}
-	.wrap .plugin-title {
-		font-size: 2.2em;
-		font-weight: 300;
-		margin: 1em 0 0;
-		text-align: center;
-	}
-	.wrap h1, .wrap h2, .wrap h3, .wrap h4, .wrap h5, .wrap h6 {
-		font-weight: 400;
-	}
-	.wrap h2 {
-		margin-bottom: -10px;
-	}
-	h2 .nav-tab {
-		font-size: 12px;
-		line-height: 16px;
-		margin-right: 1px;
-    	padding: 4px 6px;
-    	font-weight: 400;
-	}
-	.doc-style {
-		padding-top:10px;
-		padding-left:10px;
-	}
-	.doc-style .nav-tab-wrapper {
-		padding-top: 0;
-		padding-left: 0;
-		padding-right: 0;
-		margin-bottom: 20px;
-		border-bottom: 1px solid #ddd;
-		text-align: center;
-	}
-	.doc-style .nav-tab-wrapper a {
-		color: #555;
-		border-color: #ddd; border-bottom: 0;
-	}
-	.doc-style .nav-tab-wrapper a {
-		outline: 0; /* prevent dotted-line in Firefox */
-	}
+/* Included only for Settings -> Custom Content */
 
-	.doc-style h3 {
-		font-size: 1.2em;
-	}
-	.doc-style, .doc-style p, .doc-style .form-table td {
-		font-size: 16px;
-		line-height: 1.4em; 
-	}
-	.doc-style .remove-height {
-		margin-bottom: -50px;
-	}
-	.doc-style a {
-		text-decoration: none;
-		color: #0074A2;
-	}
-	.doc-style a:hover {
-		color: #000;
-	}
-	.doc-style code {
-		font-family: monospace,Consolas,Monaco;
-		font-size: 16px;
-		padding: 10px 15px;
-	    line-height: 24px;
-	    display: block;
-	}
-	.doc-style h4 {
-		font-weight:300;
-		font-style:italic;
-		font-size: 16px;
-		color: #555;
-	}
-	.doc-style ul {
-		list-style:none;
-		padding-left:20px;
-	}
-	.doc-style ul > ul {
-		padding-bottom: 10px;
-		list-style: none;
-		padding-left: 20px;
-	}
-	.doc-style .overview-logo-pad {
-		margin: 15px auto;
-	}
-	.doc-style hr.setting-section {
-		margin-top: 0px;
-		padding-bottom: 10px;
-	}
-	.doc-style .form-table td {
-		width: 100%;
-		line-height: 1em;
-		padding: 10px;
-	}
-	.doc-style .form-table hr {
-	}
-	.doc-style .green {
-		color: #1abb1e;
-	}
-	.doc-style .grey {
-		color: #888;
-	}
+.wrap {
+	margin-left: -5px;
+	max-width: 760px; /*margin: 0 auto;*/
+	font-weight: 300;
+}
+.wrap .plugin-title {
+	font-size: 2.2em;
+	font-weight: 300;
+	margin: 1em 0 0;
+	text-align: center;
+}
+.wrap h1, .wrap h2, .wrap h3, .wrap h4, .wrap h5, .wrap h6 {
+	font-weight: 400;
+}
+.wrap h2 {
+	margin-bottom: -10px;
+}
+h2 .nav-tab {
+	font-size: 12px;
+	line-height: 16px;
+	margin-right: 1px;
+	padding: 4px 6px;
+	font-weight: 400;
+}
+.doc-style {
+	padding-top:10px;
+	padding-left:10px;
+}
+.doc-style .nav-tab-wrapper {
+	padding-top: 0;
+	padding-left: 0;
+	padding-right: 0;
+	margin-bottom: 20px;
+	border-bottom: 1px solid #ddd;
+	text-align: center;
+}
+.doc-style .nav-tab-wrapper a {
+	color: #555;
+	border-color: #ddd; border-bottom: 0;
+}
+.doc-style .nav-tab-wrapper a {
+	outline: 0; /* prevent dotted-line in Firefox */
+}
+
+.doc-style h3 {
+	font-size: 1.2em;
+}
+.doc-style, .doc-style p, .doc-style .form-table td {
+	font-size: 16px;
+	line-height: 1.4em; 
+}
+.doc-style .remove-height {
+	margin-bottom: -50px;
+}
+.doc-style a {
+	text-decoration: none;
+	color: #0074A2;
+}
+.doc-style a:hover {
+	color: #000;
+}
+.doc-style code {
+	font-family: monospace,Consolas,Monaco;
+	font-size: 16px;
+	padding: 10px 15px;
+    line-height: 24px;
+    display: block;
+}
+.doc-style h4 {
+	font-weight:300;
+	font-style:italic;
+	font-size: 16px;
+	color: #555;
+}
+.doc-style ul {
+	list-style:none;
+	padding-left:20px;
+}
+.doc-style ul > ul {
+	padding-bottom: 10px;
+	list-style: none;
+	padding-left: 20px;
+}
+.doc-style .overview-logo-pad {
+	margin: 15px auto;
+}
+.doc-style hr.setting-section {
+	margin-top: 0px;
+	padding-bottom: 10px;
+}
+.doc-style .form-table td {
+	width: 100%;
+	line-height: 1em;
+	padding: 10px;
+}
+.doc-style .form-table hr {
+}
+.doc-style .green {
+	color: #1abb1e;
+}
+.doc-style .grey {
+	color: #888;
+}
