--- a/includes/docs/html/comment.html
+++ b/includes/docs/html/comment.html
@@ -38,6 +38,7 @@ Inside the comments loop, use <b>[comment]</b> to display the following fields.
 	<li><b>author-link</b> - author name with link to URL; if no URL, then displays just name</li>
   <li><b>avatar</b> - author avatar image; optional <i>size</i> parameter (default 96, max 512)</li>
 </ul><ul>
+  <li><b>counted</b> - shows "No comments", "1 comment" or "X comments"</li>
 	<li><b>total</b> - total comment count; use after the loop is finished</li>
 </ul>
 
