--- a/includes/docs/html/if.html
+++ b/includes/docs/html/if.html
@@ -37,6 +37,7 @@ Use the <b>[if]</b> shortcode to display content based on certain conditions.
 	<li><b>value</b> - if post has value(s) in the specified field; if no value is set, it will check if any field value exists</li>
   <li><b>start</b> - use instead of <b>value</b> to check only the beginning of field value</li>
   <li><b>lowercase</b> - set to <i>true</i> to compare lowercased version of field value</li>
+  <li><b>empty</b> - set to <i>false</i> if you're using dynamic values which could be empty, for example, when using [pass]</li>
 </ul>
 <h4>User field</h4>
 <ul>
