--- a/includes/docs/html/content.html
+++ b/includes/docs/html/content.html
@@ -143,4 +143,5 @@ You can loop through an array of key-value pairs stored in a field, using the <b
 <ul>
 	<li><b>each</b> - set <i>true</i> to loop through multiple arrays of key-value pairs</li>
 	<li><b>debug</b> - set <i>true</i> to print the whole array and see how it's structured</li>
+  <li><b>global</b> - access global variable with given name</li>
 </ul>
