--- a/includes/docs/html/load.html
+++ b/includes/docs/html/load.html
@@ -7,7 +7,7 @@ Use the <b>[load]</b> shortcode to include a file into a page.
 
 <code>[load file="template/sidebar.html"]</code>
 
-The file can contain HTML, PHP, CSS, JavaScript, and shortcodes. <br>
+The file can contain HTML, PHP, CSS, JavaScript, or shortcodes. <br>
 <hr>
 <h3>Parameters</h3>
 
