--- a/includes/docs/html/welcome.html
+++ b/includes/docs/html/welcome.html
@@ -6,6 +6,7 @@
 <ul>
 	<li>The <a href="options-general.php?page=ccs_reference&tab=loop">[loop]</a> and <a href="options-general.php?page=ccs_reference&tab=content">[content]</a> shortcodes</li>
 	<li>View the site's <a href="index.php?page=content_overview">content structure</a></li>
+  <!--<li><a href="options-general.php?page=ccs_reference&tab=examples">Examples of common use cases</a>&nbsp;&mdash;&nbsp;<span class="green">new!</span></li>-->
 </ul>
 
 <h3>Included</h3>
