--- a/includes/docs/html/loop.html
+++ b/includes/docs/html/loop.html
@@ -68,7 +68,7 @@ The <b>[content]</b> and <b>[field]</b> shortcodes target each post in the loop
 	<li><b>field</b> - field name</li>
 	<li><b>value</b> - value to search for</li>
 	<li><b>start</b> - use instead of <b>value</b> to check only the beginning of field value</li>
-	<li><b>compare</b> - <i>equal</i> (default), <i>not</i>, <i>more</i>, <i>less</i>, or operators like <i>&gt;=</i> and <i>&lt;=</i>.</li>
+	<li><b>compare</b> - <i>equal</i> (default), <i>not</i>, <i>like</i>, <i>more</i>, <i>less</i>, or operators like <i>&gt;=</i> and <i>&lt;=</i>.</li>
 </ul><ul>
 	<li><b>relation</b>, <b>field_2</b>, <b>value_2</b>, <b>compare_2</b> - additional field query, where <i>relation</i> is <i>and</i> (default) or <i>or</i></li>
 </ul>
