--- a/includes/docs/html/loop.html
+++ b/includes/docs/html/loop.html
@@ -42,7 +42,7 @@ The <b>[content]</b> and <b>[field]</b> shortcodes target each post in the loop
 
 <h4>Author</h4>
 <ul>
-	<li><b>author</b> - show posts by author ID, login name, or <i>this</i> for current user; multiple values possible</li>
+	<li><b>author</b> - show posts by author ID, login name; multiple values possible; use <i>this</i> for current logged-in user, and <i>same</i> for the same author as current post</li>
 	<li><b>author_exclude</b> - exclude posts by author ID, login name, or <i>this</i> for current user</li>
 </ul>
 
